--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
           <div class="skill-row">
             <img class="my-skills-img" src="images/computer.png" alt="computer-img">
             <h3>Mobile App Development 📱</h3>
-            <p>I started to learn code when i was 19 years old, day by day i end up creating some messy designs which let me increase my designing ideas.Overtime, I have gained a wealth experience in designing and developing mobile and web applications.</p>
+            <p class="skill-description" >I started to learn code when i was 19 years old, day by day i end up creating some messy designs which let me increase my designing ideas.Overtime, I have gained a wealth experience in designing and developing mobile and web applications.</p>
           </div>
           <div class="skill-row">
-            <img class="" src="images/chillies.png" alt="chilli-img">
+            <img class="my-skills-img-biryani" src="images/chillies.png" alt="chilli-img">
             <h3>The Biryani Challenge 🔥</h3>
-            <p>But my best skill is eating biryani. I am the undisputed 👑 of biryani. Beef and mutton biryani are my favourite flavours.</p>
+            <p class="skill-description">But my best skill is eating biryani. I am the undisputed 👑 of biryani. Beef and mutton biryani are my favourite flavours.</p>
           </div>
         </div>
         <hr>
