Added more Consistent Styles

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sacramento">
 </head> 
 <body>
-    <div class="top-Container">
+    <div class="top-container">
         <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
         <h1>I'm Mashood</h1>
-        <h2 class="job-title">a <span>Soft</span>ware Engineer.</h2>
+        <h2>a <span>Soft</span>ware Engineer.</h2>
         
         <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
         <img src="images/mountain.png" alt="mountain-img">
@@ -25,7 +25,7 @@
         <div class="profile">
           <!-- <img class="my-prof-img" src="images/mashood.jpg" alt="mashood-img"> -->
           <h2>Hello.</h2>
-          <p>I am an Software Engineer. I work on Flutter, Native Android and Web Development. I ❤️ Football, code and Biryani.</p>
+          <p class="intro">I am an Software Engineer. I work on Flutter, Native Android and Web Development. I ❤️ Football, code and Biryani.</p>
         </div>
         <hr>
         <!------------------------------ My Skills ---------------------------->
