Added More Changes in style.css and index.html

--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
         <div class="contact-me">
           <h2>Get In Touch</h2>
           <h3><span>You Love Biryani as I do?</span></h3>
-          <p>You Love Biryani as I do? Let's talk about how awesome they are! We can code while eating biryani!!!</p>
-          <a class="btn" href="mailto:mashoodsidd97@gmail.com">EMAIL ME</a>
+          <p class="contact-message">You Love Biryani as I do? Let's talk about how awesome they are! We can code while eating biryani!!!</p>
+          <a class="btn" href="mailto:mashoodsidd97@gmail.com">CONTACT ME</a>
         </div>
       </div>
       <!-- <div>Icons made by <a href="https://www.flaticon.com/authors/pixel-perfect" title="Pixel perfect">Pixel perfect</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div> -->
@@ -59,7 +59,7 @@
         <a class="footer-link" href="https://www.linkedin.com/in/mashood-siddiquie-5940a9168/">LinkedIn</a>
         <a class="footer-link" href="https://Github.com/Mashood97">Github</a>
         <a class="footer-link" href="https://web.facebook.com/mashood.sidd?_rdc=1&_rdr">Facebook</a>
-        <p>© 2021 Mashood.</p>
+        <p class="copyright">© 2021 Mashood.</p>
       </div>
       
 </body>
