--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
 
         <div class="contact-me">
           <h2>Get In Touch</h2>
-          <h3><span>You Love Biryani as I do?</span></h3>
-          <p class="contact-message">You Love Biryani as I do? Let's talk about how awesome they are! We can code while eating biryani!!!</p>
+          <h3><span>If You Love Biryani as much as I do.</span></h3>
+          <p class="contact-message">Love Biryani as much as I do. Let's talk about how awesome they are! We can code while eating biryani!!!</p>
           <a class="btn" href="mailto:mashoodsidd97@gmail.com">CONTACT ME</a>
         </div>
       </div>
